后端框架搭建完成+后端注册api完成

--- a/backend/src/main/resources/templates/pk/index.html
+++ b/backend/src/main/resources/templates/pk/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>index</title>
 </head>
-    <img src="../image/kob.png">
+    <img src = "../image/kob.png">
+    <div>nihao</div>
 <body>
 
 </body>
