jwt验证完成，注册、获取信息、获取jwt_token api

--- a/backend/src/main/resources/templates/pk/index.html
+++ b/backend/src/main/resources/templates/pk/index.html
@@ -5,7 +5,7 @@
     <title>index</title>
 </head>
     <img src = "../image/kob.png">
-    <div>nihao</div>
+    <div>homepage</div>
 <body>
 
 </body>
